- load evdev (thus fixing a crash)
- load psmouse (it is now modular)

Version 17.20 - 18 March 2016

- prevent slow boot on first boot (mga#16684)
- partionning:
  o fix partitions not initially displayed (mga#17564)

Version 17.19 - 24 February 2016

- detect nvme devices as block devices (mga#17743)
- detect partitions on nvme devices (mga#17743)

Version 17.18.1 - 10 February 2016

- bootloader:
  o add support for grub2-text too (mga#9431)
- partionning:
  o check ESP has the right fs type (mga#16246)
  o check that ESP mount point actually is an ESP

Version 17.17 - 29 January 2016

- fix hidden cursor (mga#17470)

Version 17.16 - 21 January 2016

- Add ARM support in perl-install
- options:
  o silent a warning bout BOOT_IMAGE option
- partionning:
  o fix crash (mga#17484)

Version 17.14 - 11 January 2016

- do not warn about kernel options when parsing drakx options
- include libinput udev helpers (mga#17470)

Version 17.13 - 9 January 2016

- regressions from 17.11:
  o fix ignoring options from isolinux
  o fix parsing stage1's automatic option (mga#17441)
- silent a perl-5.22 warning

Version 17.12 - 2 January 2016

- bootloader:
  o log found kernels (mga#16128)
  o skip swap in the list of partitions (mga#15767)
- partitioning:
  o auto fill LV name from mntpnt (mga#5407)
  o suggest "lv_foo" instead of just "foo" for LVname
- summary:
  o drop support for ISApnp sound cards
- fix a message (mga#15414)
- misc cleanups

Version 17.11 - 1 January 2016

- make report.bug.xz more reproducible
- misc cleanups
- drakx-in-chroot:
  o use GetOpt::Long for options
    (thus allowing eg "--flang fr" instead of just "--flang=fr")

Version 17.10 - 24 December 2015

- use mutter instead of matchbox (fix black screen)

Version 17.9 - 24 December 2015

- include 60-evdev.rules instead of no more existing 60-keyboard.rules
- silent gtk+ warnings about swrast driver

Version 17.8 - 22 December 2015

- recognize new kernel-4.3 drivers

Version 17.7.1 - 17 December 2015