@@ -1083,13 +1083,13 @@ sub display_release_notes {
         return;
     }
 
-    require Gtk3::WebKit;
+    require Gtk3::WebKit2;
     require ugtk3;
     ugtk3->import(':all');
     require mygtk3;
     mygtk3->import('gtknew');
-    my $view = gtknew('WebKit_WebView', no_popup_menu => 1);
-    $view->load_html_string($release_notes, '/');
+    my $view = gtknew('WebKit2_WebView', no_popup_menu => 1);
+    $view->load_html($release_notes, '/');
                                
     my $w = ugtk3->new(N("Release Notes"), transient => $::main_window, modal => 1, pop_it => 1);
     gtkadd($w->{rwindow},
