@@ -1,5 +1,6 @@
 - load evdev (thus fixing a crash)
 - load psmouse (it is now modular)
+- use WebKit2 instead of WebKit1 for displaying help content
 
 Version 17.20 - 18 March 2016
 
